setup simple home and about components and added link tags to them in navbar

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -384,6 +384,10 @@ table th {
   margin-right: 0.6rem;
 }
 
+#logo {
+  margin-right: 1rem;
+}
+
 /* Animation (Add After) */
 .item-enter {
   opacity: 0;
